# Video-Curation-Sample

./: ATTRIBUTION.md  CMakeLists.txt  README.md
deployment/certificate/: CMakeLists.txt  Dockerfile  build.sh  self-sign.sh  shell.sh
deployment/docker-swarm/: README.md  build.sh  docker-compose.yml.m4  frontend.m4  ingest.m4  kafka.m4  start.sh  stop.sh  vdms.m4  video.m4  zookeeper.m4
deployment/kubernetes/: README.md  build.sh  frontend.yaml.m4  ingest.yaml.m4  kafka.yaml.m4  start.sh  vdms.yaml.m4  video.yaml.m4  zookeeper.yaml.m4
doc/: cmake.md  dist.md
frontend/: CMakeLists.txt  Dockerfile  README.md  build.sh  frontend.py  merge_iv.py  nginx.conf  search.py  setting.py  shell.sh
frontend/html/: home.shtml  index.html  playback.shtml  setting.shtml  template.shtml
frontend/html/css/: app.css
frontend/html/js/: api.js  app.js  home.js  playback.js  search.js  setting.js
ingest/: CMakeLists.txt  Dockerfile  build.sh  ingest.py  shell.sh  zkstate.py
ingest/gstreamer_gva/: SConstruct
ingest/gstreamer_gva/metaData_extract/: SConscript
ingest/gstreamer_gva/metaData_extract/bash/: run_video_summarization_app.sh
ingest/vdms_converter/: SConstruct
ingest/vdms_converter/inc/: vdms_converter.hpp
ingest/vdms_converter/src/: vdms_converter.cpp
script/: build.sh  deployment.cmake  mk-dist.sh  service.cmake  update-image.sh
video/: CMakeLists.txt  Dockerfile  build.sh  cleanup.sh  download.sh  info.py  manage.py  manage.sh  manifest.py  nginx.conf  segment.py  shell.sh  streamlist.txt  thumbnail.py
(+8 files in other folders)
